[package]
name = "esp32c6_lcd_st7789"
version = "0.2.5"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "esp32c6_lcd_st7789"
path = "./src/bin/main.rs"

[dependencies]
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
# Основной стек
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }

# Новый крейт вместо esp-hal-embassy
esp-rtos = { version = "0.2.0", features = ["embassy", "esp32c6"] }

riscv-rt = "0.16.0"

embassy-embedded-hal = { version = "0.6.0" }
embassy-sync = "0.6.2"
# Только типы, без реализации драйвера (его дает esp-rtos)
embassy-time = { version = "0.5.1", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.15.0", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32c6"] }

display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
# Дисплей и графика
mipidsi = { version = "0.10.0" }

# Остальное
defmt = "0.3.10"
static_cell = "2.1.0"

panic-halt = "1.0.0"

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

embassy-executor = { version = "0.9.1", features = ["executor-thread"] }
fugit = "0.3.9"

[features]
# Default features are available when no --features flag is specified.
default = []
# Define a feature named "my-feature"
my-feature = []

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
opt-level = "z"
# Оставляем символы отладки (они не попадают в прошивку .bin, но нужны для cargo-bloat)
debug = true
# Удаление неиспользуемых секций (требует поддержки линкера, для ESP32-C6 работает отлично)
strip = false
# debug            = 2
debug-assertions = false
overflow-checks = false
lto = "fat"
# Паника сразу останавливает чип, не раздувая код таблицами раскрутки стека (unwind)
panic = "abort"
incremental = false
codegen-units = 1  # LLVM can perform better optimizations using a single thread
